{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 7,
  "lineage": "2ac9619c-2d39-4912-0890-326a5fa5b1a0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "main-rtbl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:724560640274:route-table/rtb-0f5cbc513e4f83f12",
            "default_route_table_id": "rtb-0f5cbc513e4f83f12",
            "id": "rtb-0f5cbc513e4f83f12",
            "owner_id": "724560640274",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e773cbad92e4ae2c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "development-main-rtbl"
            },
            "tags_all": {
              "Name": "development-main-rtbl"
            },
            "timeouts": null,
            "vpc_id": "vpc-0251f75062b497335"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.myjenkins-server-igw",
            "aws_vpc.myjenkins-server-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:724560640274:security-group/sg-053c3d40fe0aa6313",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-053c3d40fe0aa6313",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "724560640274",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "development-default-sg"
            },
            "tags_all": {
              "Name": "development-default-sg"
            },
            "vpc_id": "vpc-0251f75062b497335"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myjenkins-server-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myjenkins-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06d4b7182ac3480fa",
            "arn": "arn:aws:ec2:us-east-2:724560640274:instance/i-05ab0e334f85bad5c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05ab0e334f85bad5c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "last-try",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0aaadb35e7a2b4eae",
            "private_dns": "ip-10-0-10-143.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.143",
            "public_ip": "3.145.92.64",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-064bf5da0bb23d645",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-033eba625b9dded67",
            "tags": {
              "Name": "development-server"
            },
            "tags_all": {
              "Name": "development-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-053c3d40fe0aa6313"
            ]
          },
          "dependencies": [
            "aws_default_security_group.default-sg",
            "aws_subnet.myjenkins-server-subnet-1",
            "aws_vpc.myjenkins-server-vpc",
            "data.aws_ami.latest-amazon-linux-image"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myjenkins-server-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:724560640274:internet-gateway/igw-0e773cbad92e4ae2c",
            "id": "igw-0e773cbad92e4ae2c",
            "owner_id": "724560640274",
            "tags": {
              "Name": "development-igw"
            },
            "tags_all": {
              "Name": "development-igw"
            },
            "vpc_id": "vpc-0251f75062b497335"
          },
          "dependencies": [
            "aws_vpc.myjenkins-server-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myjenkins-server-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:724560640274:subnet/subnet-033eba625b9dded67",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033eba625b9dded67",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724560640274",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "development-subnet-1"
            },
            "tags_all": {
              "Name": "development-subnet-1"
            },
            "vpc_id": "vpc-0251f75062b497335"
          },
          "dependencies": [
            "aws_vpc.myjenkins-server-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myjenkins-server-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:724560640274:vpc/vpc-0251f75062b497335",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07492e981dc4e9412",
            "default_route_table_id": "rtb-0f5cbc513e4f83f12",
            "default_security_group_id": "sg-053c3d40fe0aa6313",
            "dhcp_options_id": "dopt-0f3115c77b4ce12b3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0251f75062b497335",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f5cbc513e4f83f12",
            "owner_id": "724560640274",
            "tags": {
              "Name": "development-vpc"
            },
            "tags_all": {
              "Name": "development-vpc"
            }
          }
        }
      ]
    }
  ]
}